<resources>
    <string name="app_name">DemoThree</string>

    <!-- Strings for home activity -->
    <string name="skip_login_button_text">Skip for testing</string>
    <string name="next_game_day_text">08</string>
    <string name="next_training_day_text">13</string>
    <string name="next_social_day_text">15</string>
    <string name="next_game_month_text">nov</string>
    <string name="next_training_month_text">nov</string>
    <string name="next_social_month_text">nov</string>

    <!-- Strings for notice activity -->
    <string name="notices_activity_title_text">Notices</string>
    <string name="input_text_view_content">Content:</string>
    <string name="compose_button_text">Compose</string>
    <string name="compose_done_button_text">Done</string>
    <string name="compose_back_button_text">Back</string>

    <!-- Strings for login activity -->
    <string name="signin_password_text">Password</string>
    <string name="signin_email_text">Email address</string>
    <string name="register_email_text">Email address</string>
    <string name="register_password_text">Password</string>
    <string name="test_server_button_text">Test Server</string>


    <!-- Server test strings -->
    <string name="message_to_server_text">MESSAGE TO SERVER</string>
    <string name="message_from_server_text">MESSAGE FROM SERVER</string>
    <string name="send_button_text">Send</string>
    <string name="emailtvtext">email</string>
    <string name="passwordTVtext">password</string>
    <string name="notice_fragment_client_name">NAME</string>
    <string name="notice_fragment_date">DATE</string>
    <string name="test_database_button_text">test database</string>
    <string name="member_fragment_positions_text">Positions:</string>
    <string name="member_fragment_responsibilities_text">Responsibilities:</string>
    <string name="membername">MemberName</string>
    <string name="teamname">TeamName</string>
    <string name="email_address">Email address</string>
    <string name="positions_played_title">Positions Played</string>
    <string name="positions_played">Positions Played</string>
    <string name="add_position">Add Position</string>
    <string name="responsibilities_title">Responsibilities</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="add_responsibility">Add Responsibility</string>
    <string name="back">Back</string>
    <string name="s_amp_c"><![CDATA[S&C]]></string>
    <string name="select_string">Select string</string>
    <string name="analyse_items">items</string>
    <string name="toast_invalid_message">Invalid email or password</string>

</resources>
