<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_from_server_text"
        android:id="@+id/message_from_server"
        android:textSize="20sp"
        android:paddingBottom="40dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_to_server_text"
        android:textSize="20sp"
        android:id="@+id/message_to_server"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_text"
        android:id="@+id/send_button"
        android:onClick="onSendClick"/>


    <TextView
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailTV"
        android:text="@string/emailtvtext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passTV"
        android:text="@string/passwordTVtext"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailbtn"
        android:onClick="onTest"/>


</LinearLayout>