<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top_linear"
            android:orientation="vertical"
            >


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/top_linear"
            android:id="@+id/middle_linear">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dates_grid_layout"
                android:rowCount="1"
                android:columnCount="3"
                android:layout_below="@id/top_linear"
                android:layout_above="@+id/grid_layout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:background="#263238"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_game_ll"
                    android:orientation="vertical"
                    android:layout_row="0"
                    android:layout_column="0">

                    <TextView
                        android:id="@+id/next_game_home_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text=""
                        android:textStyle="bold"
                        android:textSize="35sp"
                        android:paddingLeft="5dp"
                        android:textColor="#ffffff"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/next_game_month_home_tv"
                        android:text="@string/next_game_month_text"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#ffffff"
                        android:paddingLeft="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:id="@+id/game_label"
                        android:text="GAME"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_training_ll"
                    android:orientation="vertical"
                    android:layout_row="0"
                    android:layout_column="1">

                    <TextView
                        android:id="@+id/next_training_home_tv"
                        android:layout_width="wrap_content"
                        android:textColor="#ffffff"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/next_training_day_text"
                        android:textStyle="bold"
                        android:textSize="35sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:id="@+id/next_training_month_home_tv"
                        android:text="05"
                        android:layout_gravity="center_horizontal"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/training_label"
                        android:textColor="#ffffff"
                        android:text="TRAINING"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_social_ll"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/next_social_home_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="14dp"
                        android:text="@string/next_social_day_text"
                        android:textStyle="bold"
                        android:textSize="35sp"
                        android:paddingRight="5dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/next_social_month_home_tv"
                        android:text="04"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_horizontal"
                        android:paddingRight="25dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/social_label"
                        android:text="SOCIAL"
                        android:textColor="#ffffff"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textStyle=""
                        />
                </LinearLayout>
            </GridLayout>
        </LinearLayout>





        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/grid_layout"
            android:rowCount="2"
            android:columnCount="2"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:background="#ffc400">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notice_home_button"
                android:onClick="onGoToNotices"
                android:clickable="true"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/noticepng"
                    android:tint="#ffffff"
                    android:src="@drawable/ic_chat_black_48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Notices"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stats_home_button"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="onGoToStats"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/statpng"
                    android:tint="#ffffff"
                    android:src="@drawable/trend_arrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Statistics"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/members_home_button"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="onGoToMembers"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/mempng"
                    android:src="@drawable/personicon"
                    android:tint="#ffffff"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Members"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log_home_button"
                android:clickable="true"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:onClick="onGoToLog"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logpng"
                    android:tint="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_note_add_black_48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Log"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>

            </LinearLayout>







        </GridLayout>




    </RelativeLayout>





</LinearLayout>